k8s/obligatorio.yml
apiVersion: v1
kind: Service
metadata:
  name: products-service
spec:
  selector:
    app: products-app
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 8080
  

---

apiVersion: v1
kind: Service
metadata:
  name: payments-service
spec:
  selector:
    app: payments-app
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 8080
  

---

apiVersion: v1
kind: Service
metadata:
  name: shipping-service
spec:
  selector:
    app: shipping-app
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: orders-service
spec:
  selector:
    app: orders-app
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 8080
  
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-app
spec:
  selector:
    matchLabels:
      app: payments-app
  replicas: 1
  template:
    metadata:
      labels:
        app: payments-app
    spec:
      containers:
      - name: payments-app
        image: ortdevops2022/payments-service-example
        resources:
          requests:
            memory: "100Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-app
spec:
  selector:
    matchLabels:
      app: products-app
  replicas: 1
  template:
    metadata:
      labels:
        app: products-app
    spec:
      containers:
      - name: products-app
        image: ortdevops2022/products-service-example
        resources:
          requests:
            memory: "100Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping-app
spec:
  selector:
    matchLabels:
      app: shipping-app
  replicas: 1
  template:
    metadata:
      labels:
        app: shipping-app
    spec:
      containers:
      - name: shipping-app
        image: ortdevops2022/shipping-service-example
        resources:
          requests:
            memory: "100Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-app
spec:
  selector:
    matchLabels:
      app: orders-app
  replicas: 1
  template:
    metadata:
      labels:
        app: orders-app
    spec:
      containers:
      - name: orders-app
        image: ortdevops2022/orders-service-example
        resources:
          requests:
            memory: "100Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        args: ["http://payments-app", "http://products-app", "http://shipping-app"]
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
