k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: obligatorio-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
        - path: /payments
          pathType: Prefix
          backend:
            service: 
              name: payments-service
              port:
                number: 8080
        - path: /products
          pathType: Prefix
          backend:
            service: 
              name: products-service
              port:
                number: 8080
        - path: /shipping
          pathType: Prefix
          backend:
            service: 
              name: shipping-service
              port:
                number: 8080
